--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
+    "blurhash": "^2.0.5",
     "react": "^18.3.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
